[package]
name = "nockchain-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
regex = "1.9"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"